# oc-index

./: .gitignore  AGENT.md  Cargo.toml  DEV.md  DEV1.md  README.md  dev_log.md  oci.py  ocignore
src/: commands.rs  config.rs  default_ignore  dir_utils.rs  display.rs  file_utils.rs  ignore.rs  index.rs  main.rs  scanner.rs
tests/: integration_tests.rs
