[package]
name = "oci"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
anyhow = "1.0"
walkdir = "2.5"
glob = "0.3"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

[dev-dependencies]
tempfile = "3.15"

[[bin]]
name = "oci"
path = "src/main.rs"
